NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

V1.0.2
- Added : Option to enable/disable the MediaRSS Feed
- Changed : Added screencolor flashvar as bgcolor for the flash slideshow
- Bugfix : Load SWFobject always when the imagerotator exist
- Bugfix : Zip-Upload in existing gallery failed

V1.0.1 - 11.12.2008
- Bugfix : Change upgrade routine, import_date_time could cause a memory problem
- Bugfix : Help pages will not show up in non-english enviroment
- Bugfix : Show gallery name if title is empty

V1.0.0 - 11.12.2008
- NEW : Adding some rewrite rules for the Blog title for a better SEO (Will be continued...)
- NEW : Added ImageMagick support (currently a bit experimental) (THX to Frederic de Ranter) 
- NEW : Automatic unistall via register_uninstall_hook()
- NEW : Added a presort option to sort easier the images
- NEW : Lookup for a nggallery.css in the theme folder
- NEW : Added Date/Time field to database and import it from EXIF, new sort option
- NEW : Multi Widgets to show links to Media RSS feeds (THX to Vincent Prat) 
- NEW : PicLens support for galleries (THX to Vincent Prat) 
- NEW : Copy/Move images between galleries (THX to Vincent Prat) 
- NEW : Media RSS feeds (either for galleries, albums or global) (THX to Vincent Prat) 
- NEW : Image tag management (THX to Vincent Prat) 
- NEW : Convert all shortcodes to WP shortcodes API
- NEW : AJAX based thumbnail generator
- NEW : Create output via template files, more flexible and support for multiple templates
- NEW : Extended role system. Each gallery has now a author
- NEW : [thumb id="4,5,12,..."] shortcode. You can now insert 
        thumbnails for one or more images (that are not necessarly inside the same gallery).
- Changed : Add swfupload 2.2.0. Support for Adobe Flash 10 upload		
- Changed : Update all Admin pages for Wordpress 2.7 Admin UI		
- Changed : New icon for TinyMCE and WP2.7 Menue from http://www.pinvoke.com/
- Changed : Move update message to admin.php