@@ -252,7 +252,8 @@ html>body .ngg-album {
 .slideshow {
 	margin-left: auto; 
 	margin-right: auto;
-	text-align:center;	
+	text-align:center;
+	outline: none;	
 }
 
 .slideshowlink {
