@@ -3,6 +3,7 @@ by Alex Rabe & NextGEN DEV Team
 
 V1.0.2
 - Added : Option to enable/disable the MediaRSS Feed
+- Added : For flash under FF3/WIN we should use outline: none; 
 - Changed : Added screencolor flashvar as bgcolor for the flash slideshow
 - Bugfix : Load SWFobject always when the imagerotator exist
 - Bugfix : Zip-Upload in existing gallery failed
